# CryptoCurrency

./: .gitignore  README.md  db.sqlite3  manage.py  openAPI_request.py
Django/: db.sqlite3
crawling/: crawling_test.py
notice/: crawling_notice.py  models.py  views.py
notice_web_project/: settings.py  wsgi.py
tss/: .package.json.swp  cryptocoins.md  package-lock.json  package.json
tss/sign/: .getAddress_bit_.js.svy  .getAddress_bit_.js.swi  .getAddress_bit_.js.swn  .getAddress_bit_.js.swo  .sendTransaction_bit_.js.swo  Cargo.toml  getAddress_bit_.js  keys.store-0  keys.store1-0  keys.store2-0  package-lock.json  package.json  sendTransaction_bit_.js  signature-2020-12-28-3:21:21  signature-2020-12-28-3:52:25  signature-2020-12-28-5:55:36  signature-2020-12-29-2:30:2  signature-2020-12-29-7:51:23  signature-2020-12-29-7:51:44  signature-2020-12-29-7:54:8  signature-2020-12-29-7:55:7  signature-2020-12-29-7:58:15  signature-2020-12-30-6:33:52  signature-2020-12-30-6:47:31  signature-2020-12-30-7:36:36  signature-2020-12-30-7:48:55  signature-2020-12-30-8:31:11  signature-2020-12-31-1:43:15  signature-2020-12-31-3:45:20  signature-2020-12-31-3:49:22  signature-2020-12-31-5:27:6  signature-2020-12-31-5:55:22  signature-2020-12-31-6:43:19  signature-2020-12-31-6:50:7  signature-2020-12-31-7:23:22  signature-2020-12-31-7:24:21  signature-2020-12-31-7:25:46  signature-2020-12-31-7:26:31  signature-2020-12-31-7:28:55  signature-2020-12-31-7:35:26  (+13 more)
tss/sign/src/: common.rs  main.rs
tss/sign/src/protocols/multi_party_ecdsa/gg_2020/: matrix.rs  mod.rs  orchestrate.rs  party_i.rs
web3js/: SSS.js  package-lock.json  package.json  security_test.js  sendTx.js  (+2 more)
(+137 files in other folders)
